ansible/playbooks/roles/install-kluster/files/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.sarajkins.space
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: stable-grafana
                port:
                  number: 80
            path: /
